# projet-c-glade-

./: Makefile  Makefile.am  Makefile.in  adminparking.glade.bak  adminparking.gladep  config.h  config.status  configure  configure.in
autom4te.cache/: output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  adminparking  agent.txt  avis.txt  callbacks.c  callbacks.h  greeting.c  greeting.h  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c  parking.txt  reclamation.txt
src/.deps/: callbacks.Po  greeting.Po
